# thestash-tauri

./: .gitignore  README-ELECTRON.md  README-TAURI.md  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx
app/settings/: page.tsx
components/: audio-player.tsx  edit-audio-dialog.tsx  error-boundary.tsx  sidebar.tsx  window-drag-region.tsx
electron/: bundle-node.sh  ipc-handlers.js  main.js  preload.js  verify-build.js
electron/.next/standalone/: .gitignore  README.md  SETUP-DESKTOP.md  next.config.js  package-lock.json  package.json  server.js  tailwind.config.ts
electron/.next/standalone/app/: page.tsx
electron/.next/standalone/app/tags/: page.tsx
electron/.next/standalone/app/upload/: page.tsx
electron/.next/standalone/components/: window-drag-region.tsx
electron/.next/standalone/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
electron/.next/standalone/electron/: bundle-node.sh  copy-standalone.js  package.json
electron/.next/standalone/lib/: bpm-detector.ts  electron-storage.ts
electron/.next/static/chunks/: 283-3e43d9e2fa61d254.js  530-84811581c5036247.js  620-1ffd3d6c8aec9636.js  78-73f79ccd585daddf.js  824-b649ff9163347828.js  main-61aaeac5aaa03b29.js  main-app-1fcbe69fe2af5b46.js
electron/.next/static/css/: 856e7c71b4eb5289.css
lib/: electron-storage.ts  tauri-storage.ts  use-hydrated.ts
public/: manifest.json
public/lib/: beatdetektor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
store/: audio-store.ts
(+44 files in other folders)
