[package]
name = "the-stash"
version = "0.1.0"
description = "the stash - desktop app"
authors = ["the stash"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "macos-private-api", "path-all", "window-hide", "window-close", "window-unminimize", "window-unmaximize", "fs-create-dir", "window-start-dragging", "window-minimize", "window-maximize", "fs-exists", "fs-remove-file", "fs-read-file", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the dist output.
custom-protocol = ["tauri/custom-protocol"]

